test/sema/typeck/enum/call-variant-double-type-params.dora
enum Foo[T] { A(Int32), B }
fn f() { Foo[Int32]::A[Int32](1i32); }
